--- a/api/composer.json
+++ b/api/composer.json
@@ -42,7 +42,8 @@
             "Increment\\Common\\System\\": "packages/increment/common/system/src/",
             "Increment\\Messenger\\": "packages/increment/messenger/src/",
             "Increment\\Common\\Notification\\": "packages/increment/common/notification/src/",
-            "Increment\\Account\\": "packages/increment/account/src/"
+            "Increment\\Account\\": "packages/increment/account/src/",
+            "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/",
         }
     },
     "autoload-dev": {
