--- a/api/composer.json
+++ b/api/composer.json
@@ -43,7 +43,7 @@
             "Increment\\Messenger\\": "packages/increment/messenger/src/",
             "Increment\\Common\\Notification\\": "packages/increment/common/notification/src/",
             "Increment\\Account\\": "packages/increment/account/src/",
-            "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/",
+            "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/"
         }
     },
     "autoload-dev": {
