--- a/api/composer.json
+++ b/api/composer.json
@@ -29,7 +29,20 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "packages/increment/common/rating/src/",
+            "packages/increment/account/src/",
+            "packages/increment/common/comment/src/",
+            "packages/increment/common/image/src/",
+            "packages/increment/common/ticket/src/",
+            "packages/increment/common/payload/src/",
+            "packages/increment/common/invitation/src/",
+            "packages/increment/common/tutorial/src/",
+            "packages/increment/common/system/src/",
+            "packages/increment/messenger/src/",
+            "packages/increment/common/notification/src/",
+            "packages/increment/imarket/merchant/src/",
+            "packages/increment/imarket/location/src/",
         ],
         "psr-4": {
             "App\\": "app/",
@@ -43,7 +56,8 @@
             "Increment\\Messenger\\": "packages/increment/messenger/src/",
             "Increment\\Common\\Notification\\": "packages/increment/common/notification/src/",
             "Increment\\Account\\": "packages/increment/account/src/",
-            "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/"
+            "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/",
+            "Increment\\Imarket\\Location\\": "packages/increment/imarket/location/src/",
         }
     },
     "autoload-dev": {
