--- a/api/composer.json
+++ b/api/composer.json
@@ -44,7 +44,9 @@
             "packages/increment/imarket/merchant/src/",
             "packages/increment/imarket/location/src/",
             "packages/increment/imarket/reservation/src/",
-            "packages/increment/imarket/product/src/"
+            "packages/increment/imarket/product/src/",
+            "packages/increment/imarket/bundled/src/",
+            "packages/increment/imarket/wishlist/src/"
         ],
         "psr-4": {
             "App\\": "app/",
@@ -61,7 +63,9 @@
             "Increment\\Imarket\\Merchant\\": "packages/increment/imarket/merchant/src/",
             "Increment\\Imarket\\Location\\": "packages/increment/imarket/location/src/",
             "Increment\\Imarket\\Reservation\\": "packages/increment/imarket/reservation/src/",
-            "Increment\\Imarket\\Product\\":"packages/increment/imarket/product/src/"
+            "Increment\\Imarket\\Product\\":"packages/increment/imarket/product/src/",
+            "Increment\\Imarket\\Bundled\\":"packages/increment/imarket/bundled/src/",
+            "Increment\\Imarket\\Wishlist\\":"packages/increment/imarket/wishlist/src/"
         }
     },
     "autoload-dev": {
