--- a/api/composer.json
+++ b/api/composer.json
@@ -45,7 +45,8 @@
             "packages/increment/imarket/location/src/",
             "packages/increment/imarket/reservation/src/",
             "packages/increment/imarket/product/src/",
-            "packages/increment/imarket/bundled/src/"
+            "packages/increment/imarket/bundled/src/",
+            "packages/increment/common/mycircle/src/"
         ],
         "psr-4": {
             "App\\": "app/",
@@ -63,7 +64,8 @@
             "Increment\\Imarket\\Location\\": "packages/increment/imarket/location/src/",
             "Increment\\Imarket\\Reservation\\": "packages/increment/imarket/reservation/src/",
             "Increment\\Imarket\\Product\\":"packages/increment/imarket/product/src/",
-            "Increment\\Imarket\\Bundled\\":"packages/increment/imarket/bundled/src/"
+            "Increment\\Imarket\\Bundled\\":"packages/increment/imarket/bundled/src/",
+            "Increment\\Common\\Bundled\\":"packages/increment/common/mycircle/src/"
         }
     },
     "autoload-dev": {
