--- a/api/composer.json
+++ b/api/composer.json
@@ -46,7 +46,8 @@
             "packages/increment/imarket/reservation/src/",
             "packages/increment/imarket/product/src/",
             "packages/increment/imarket/bundled/src/",
-            "packages/increment/common/mycircle/src/"
+            "packages/increment/common/mycircle/src/",
+            "packages/increment/imarket/installment/src/"
         ],
         "psr-4": {
             "App\\": "app/",
@@ -65,7 +66,8 @@
             "Increment\\Imarket\\Reservation\\": "packages/increment/imarket/reservation/src/",
             "Increment\\Imarket\\Product\\":"packages/increment/imarket/product/src/",
             "Increment\\Imarket\\Bundled\\":"packages/increment/imarket/bundled/src/",
-            "Increment\\Common\\MyCircle\\":"packages/increment/common/mycircle/src/"
+            "Increment\\Common\\MyCircle\\":"packages/increment/common/mycircle/src/",
+            "Increment\\Imarket\\Installment\\":"packages/increment/imarket/installment/src/"
         }
     },
     "autoload-dev": {
