--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "PayHiram",
+  "name": "SYNQT",
   "version": "1.0.0",
-  "description": "Tutorial",
+  "description": "SYNQT",
   "author": "kennCK <kennettecanales@gmail.com>",
   "private": true,
   "scripts": {
