--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue-simple-audio": "^1.0.6",
     "vue-stripe-elements-plus": "^0.2.9",
     "vue2-datepicker": "^3.4.1",
+    "vue2-timepicker": "^1.1.6",
     "vuejs-datepicker": "^1.6.2",
     "waveplayer": "^1.0.3",
     "wavesurfer.js": "^2.0.6",
