--- a/api/composer.json
+++ b/api/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "intervention/image": "dev-master",
+        "kreait/firebase-php": "^5.14",
         "laravel/framework": "5.7.0.*",
         "laravel/socialite": "~2.0",
         "laravel/tinker": "^1.0",
